# autosca-tool

./: .gitconfig  .gitignore  Pipfile  README.md  analyze_dataset.sh  generate_docker_dataset.sh  generate_remote_server_dataset.sh  killall.sh  noroot.sh  requirements.txt  run_with_docker_server.sh  runall.sh  setup.sh  start.sh
classification_model/: LICENSE  Pipfile  plot_results.py  pvalues_calculation.py  requirements.txt  result_directories.py  setup.py  train_models.py  utils.py
classification_model/pycsca/: __init__.py  baseline.py  classification_test.py  classifiers.py  constants.py  csv_reader.py  dataset_parser.py  mlp.py  plot_utils.py  statistical_tests.py  utils.py
classification_model/scripts/: Pipfile
docker_containers/: Dockerfile  install_packages.sh
experiments/: comparison_plots.ipynb  journal.sh  learning.sh  learningcurve.ipynb  ndss.sh  plot.sh  plot_accuracy.py  runall.sh
experiments/alexa/: scan.sh
experiments/timing/: delay.sh  delay1000ms.sh  delay1ms.sh  scan1s.sh
feature_extraction/: Pipfile  README.md  extract.py  network_trace.py  state_machine.py
imitation_servers/: Dockerfile  README.md  TlsTestTool
imitation_servers/config/: base.conf  cisco_ace.conf  f5_v1.conf  facebook_v2.conf  netscaler_gcm.conf  only_block_type.conf  only_delimiter.conf  only_first_byte.conf  only_pms_version.conf  pan_os.conf  time_delay_0_1s.conf  time_delay_1s.conf
imitation_servers/data/: test_ca_rsa_certificate.pem  test_ca_rsa_private_key.pem  test_server_certificate_signed_unsupported.pem  test_server_ec.p12  test_server_rsa.p12  test_server_rsa_certificate.pem  test_server_rsa_certificate_chainWithInvalidRoot.pem  test_server_rsa_certificate_chainWithUnknownRoot.pem  test_server_rsa_certificate_expired.pem  test_server_rsa_certificate_noAuthExt.pem  test_server_rsa_certificate_noDigitalSignature.pem  test_server_rsa_certificate_noEncipher.pem
scriptable_client/: LICENSE  Pipfile  README.md  TlsTestTool  cipher suites.txt  client.py  readme.md
scriptable_client/cmake/: FindAsio.cmake  FindmbedTLS.cmake
scriptable_client/config/: Wrong_second_byte_(0x02_set_to_0x17).conf  Wrong_separator_(0x00_set_to_0x17).conf  base.conf  docker.conf  (+5 more)
scriptable_client/src/: CMakeLists.txt
scriptable_client/src/configuration/: Configuration.h  ConfigurationLoader.cpp  ConfigurationParser.cpp
scriptable_client/src/manipulation/: CMakeLists.txt  ManipulatePreMasterSecretRandomByte.cpp  ManipulatePreMasterSecretRandomByte.h  ManipulatePreMasterSecretVersion.cpp  ManipulatePreMasterSecretVersion.h  ManipulateRsaesPkcs1V15EncryptPadding.cpp  ManipulateRsaesPkcs1V15EncryptPadding.h  Manipulation.cpp  ManipulationsParser.h  SkipChangeCipherSpec.cpp  SkipChangeCipherSpec.h  SkipFinished.cpp  SkipRsaesPkcs1V15PaddingCheck.cpp
scriptable_client/src/network/: CMakeLists.txt  TcpClient.cpp  TcpServer.cpp  TcpServer.h  WaitFor.cpp  WaitFor.h
scriptable_client/src/network/private/: TcpClientData.h
scriptable_client/src/tls/: TlsContentType.h  TlsHandshakeType.h  TlsSignatureAlgorithm.h
scriptable_client/src/tls/mbedtls/: CMakeLists.txt  TlsSession.h
scriptable_client/tooling/src/: CMakeLists.txt
scriptable_client/tooling/src/configuration/: CommandLineParser.h  ConfigurationFileParser.cpp
scriptable_client/tooling/src/logging/: LogLevel.h
tls_attacker_client/: README.md  pom.xml
tls_test_tool_client/: CMakeLists.txt  README.md  client.py
tls_test_tool_client/cmake/: Findzlib.cmake
tls_test_tool_client/config/: Correctly_formatted_PKCS#1_PMS_message.conf  Invalid_TLS_version_in_PMS.conf  Wrong_first_byte_(0x00_set_to_0x17).conf
tls_test_tool_client/data/: test_server_ec_certificate.pem  test_server_ec_private_key.pem
tls_test_tool_client/src/: TlsTestTool.cpp
tls_test_tool_client/src/configuration/: CMakeLists.txt  Configuration.h  ConfigurationLoader.h  ConfigurationParser.h
tls_test_tool_client/src/manipulation/: ManipulatePreMasterSecretRandom.cpp  ManipulatePreMasterSecretRandom.h  Manipulation.h  ManipulationsParser.cpp  SkipFinished.h  SkipRsaesPkcs1V15PaddingCheck.h
tls_test_tool_client/src/network/: AbstractSocketObserver.h  TcpClient.h  TimestampObserver.cpp  TimestampObserver.h
tls_test_tool_client/src/tls/: CMakeLists.txt  TlsCipherSuite.h  TlsHandshakeHeader.h  TlsHandshakeState.h  TlsHashAlgorithm.h  TlsHeartbeatMessageHeader.h  TlsMessage.h  TlsNumbers.h  TlsPlaintextHeader.h  TlsSession.cpp  TlsSession.h  TlsSessionFactory.cpp  TlsSessionFactory.h  TlsSignatureAndHashAlgorithm.h  TlsVersion.h
tls_test_tool_client/src/tls/mbedtls/: TlsLogFilter.cpp  TlsLogFilter.h  TlsSession.cpp  TlsSession.h
tls_test_tool_client/tooling/: CMakeLists.txt
tls_test_tool_client/tooling/src/configuration/: CommandLineParser.cpp  ConfigurationFileParser.h  KeyValuePair.h
tls_test_tool_client/tooling/src/logging/: Logger.cpp  Logger.h
tls_test_tool_client/tooling/src/strings/: HexStringHelper.cpp  HexStringHelper.h  StringHelper.h
(+173 files in other folders)
